fix aside click jumping

--- a/src/css/dash/_aside.scss
+++ b/src/css/dash/_aside.scss
@@ -12,8 +12,8 @@
 .siftal #sidebar figure figcaption{max-width:100%;margin:0 auto;padding:1em 0}
 .siftal #sidebar .menu{overflow-y:auto;}
 /*responsive sidebar*/
-.siftal #main::before{content:"";position:fixed;top:0;bottom:0;right:0;left:0;background-color:rgba(0,0,0,0.7);z-index:-1;opacity:0;transition:.3s;}
-body[data-sidebar].siftal #main::before{opacity:1;z-index:2}
+.siftal #main::before{content:"";position:fixed;background-color:rgba(0,0,0,0.7);z-index:-1;opacity:0;transition:.3s;}
+body[data-sidebar].siftal #main::before{top:0;bottom:0;right:0;left:0;opacity:1;z-index:2}
 body.siftal.ltr[data-sidebar] #sidebar{left:0}
 body.siftal.rtl[data-sidebar] #sidebar{right:0}
 
